Fixed spacing on faculty row page

--- a/css/style.css
+++ b/css/style.css
@@ -967,8 +967,8 @@ section.speaker {
 
 
 /* Faculty */
-.faculty .row {
-  padding: .2em 0; }
+.faculty .row .column {
+  padding: .4em 0 0 0; }
 .faculty h3 {
   font-family: "Chivo", Helvetica, Arial, sans-serif;
   font-weight: 400; }
